--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                     <div class="web-nav">
                         <!-- Main menu -->
                         <ul class="web-nav-menu" id="web-nav-menu">
-                            <li><a class="active" href="index.html#home"><i class="fas fa-home"></i> Home</a></li>
-                            <li><a href="index.html#about-me"><i class="fas fa-user-tie"></i> About Me</a></li>                             
-                            <li><a href="index.html#services"><i class="fas fa-cart-plus"></i> Services</a></li>                             
-                            <li><a href="index.html#portfolio"><i class="fas fa-trophy"></i> Portfolio</a></li>                            
-                            <li><a href="index.html#contact"><i class="fas fa-envelope-open"></i> Contact Me</a></li>                       
+                            <li><a class="active" href="/#home"><i class="fas fa-home"></i> Home</a></li>
+                            <li><a href="/#about-me"><i class="fas fa-user-tie"></i> About Me</a></li>                             
+                            <li><a href="/#services"><i class="fas fa-cart-plus"></i> Services</a></li>                             
+                            <li><a href="/#portfolio"><i class="fas fa-trophy"></i> Portfolio</a></li>                            
+                            <li><a href="/#contact"><i class="fas fa-envelope-open"></i> Contact Me</a></li>                       
                         </ul> 
                         <!-- /Main menu -->
                     </div>
@@ -202,8 +202,8 @@
                                             </div>
                                         </div>
                                         <div class="home-buttons">
-                                            <a href="index.html#about-me" class="bt-submit"><i class="lnr lnr-user"></i> About Me</a>
-                                            <a href="index.html#contact" class="bt-submit-right"><i class="lnr lnr-envelope"></i> Hire Me</a>
+                                            <a href="/#about-me" class="bt-submit"><i class="lnr lnr-user"></i> About Me</a>
+                                            <a href="/#contact" class="bt-submit-right"><i class="lnr lnr-envelope"></i> Hire Me</a>
                                         </div>
                                     </div>
                                 </div>
