Update Form link

--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
                                         <form action="https://formsubmit.co/52285937f4e1532d5efa41723163e1f9" method="POST">
                                         <input type="text" name="_honey" style="display: none;">
                                         <input type="hidden" name="_captcha" value="false">
-                                        <input type="hidden" name="_next" value="https://tozirihassan.github.com/thank-you">
+                                        <input type="hidden" name="_next" value="https://hassantoziri.github.com/thank-you">
                                         <input type="hidden" name="_subject" value="CUSTOMER CONTACT!">
                                             <input name="Name" id="name" type="text" placeholder="Name:" required autocomplete="off">
                                             <input name="E-mail" id="email" type="email" placeholder="Email:" required autocomplete="off">
