--- a/thank-you.html
+++ b/thank-you.html
@@ -230,7 +230,7 @@
                                                 <i class="far fa-envelope"></i>
                                             </div>
                                         </div>
-                                        <div class="contact-text w-75">
+                                        <div class="contact-text left-space w-75">
                                             <h2>Email</h2>
                                             <p><a href="mailto:hassanmohamedtoziri@gmail.com">hassanmohamedtoziri@gmail.com</a></p>
                                         </div>
