--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
-                                                        <img src="assets/images/microsoft office.png">
+                                                        <img src="assets/images/Visual Code.png">
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -370,12 +370,22 @@
                                                 </div> 
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
+                                                        <img src="assets/images/microsoft office.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
                                                         <img src="assets/images/airtable.png">
                                                     </div>
                                                 </div> 
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
                                                         <img src="assets/images/zoho.png">
+                                                    </div>
+                                                </div>  
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/Sublimetext.png">
                                                     </div>
                                                 </div>  
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
