--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                             <div class="counter-block">
                                                 <i class="pe-7s-cup"></i>
                                                 <h4>Limitless Revisions</h4>
-                                                <p>I will never get tired of working together until I find out what you like best. This includes your ability to modify, redistribute and declare as your own.</p>
+                                                <p>I will never get tired of working together until I find out that you are happy with it. This includes copywriting, redesign, and redaction of the work.</p>
                                             </div>
                                         </div>
                                     </div>
