--- a/thank-you.html
+++ b/thank-you.html
@@ -129,9 +129,10 @@
                                 <span class="freelencer-headline-list nav-headline-font">
                                     <b>Web Developer</b>
                                     <b>UI/UX Designer</b>
+                                    <b>Ghostwriter</b>
+                                    <b>#NoCode Enthusiast</b>
                                     <b>Community Project Writer</b>
                                     <b>Humanitarian</b>
-                                    <b>#NoCode Enthusiast</b>
                                 </span>
                             </div>
                         </div>
@@ -164,8 +165,9 @@
                                 <b>Web Developer</b>
                                 <b>UI/UX Designer</b>
                                 <b>Community Project Writer</b>
-                                <b>Humanitarian</b>
+                                <b>Ghostwriter</b>
                                 <b>#NoCode Enthusiast</b>
+                                <b>Humanitarian</b>
                             </span>
                         </div>
                     </div>
