Freelencer Web Profile

--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
                                     <b>Community Project Writer</b>
                                     <b>Web Developer</b>
                                     <b>UI/UX Designer</b>
-                                    <b>Humanitarian</b>
+                                    <b>Ghostwriter</b>
                                     <b>#NoCode Enthusiast</b>
+                                    <b>Humanitarian</b>
                                 </span>
                             </div>
                         </div>
@@ -171,7 +172,7 @@
                                 <b>Ghostwriter</b>
                                 <b>#NoCode Enthusiast</b>
                                 <b>Humanitarian</b>
-                            </span>
+                        </span>
                         </div>
                     </div>
                 </div> 
@@ -194,11 +195,11 @@
                                             <div class="freelencer-headline clip">
                                                 <span class="blc">I'm a </span>
                                                 <span class="freelencer-headline-list">
+                                                    <b>Community Project Writer</b>
                                                     <b>Web Developer</b>
                                                     <b>UI/UX Designer</b>
                                                     <b>Ghostwriter</b>
                                                     <b>#NoCode Enthusiast</b>
-                                                    <b>Community Project Writer</b>
                                                     <b>Humanitarian</b>
                                                 </span>
                                             </div>
