--- a/thank-you.html
+++ b/thank-you.html
@@ -131,6 +131,7 @@
                                     <b>Web Developer</b>
                                     <b>UI/UX Designer</b>
                                     <b>Ghostwriter</b>
+                                    <b>Security Analysts</b>
                                     <b>#NoCode Enthusiast</b>
                                     <b>Humanitarian</b>
                                 </span>
@@ -166,6 +167,7 @@
                                 <b>Web Developer</b>
                                 <b>UI/UX Designer</b>
                                 <b>Ghostwriter</b>
+                                <b>Security Analysts</b>
                                 <b>#NoCode Enthusiast</b>
                                 <b>Humanitarian</b>
                             </span>
