--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                                     <b>Web Developer</b>
                                     <b>UI/UX Designer</b>
                                     <b>Ghostwriter</b>
+                                    <b>Security Analysts</b>
                                     <b>#NoCode Enthusiast</b>
                                     <b>Humanitarian</b>
                                 </span>
@@ -169,7 +170,7 @@
                                 <b>Community Project Writer</b>
                                 <b>Web Developer</b>
                                 <b>UI/UX Designer</b>
-                                <b>Ghostwriter</b>
+                                <b>Ghostwriter</b><b>Security Analysts</b>
                                 <b>#NoCode Enthusiast</b>
                                 <b>Humanitarian</b>
                         </span>
@@ -199,6 +200,7 @@
                                                     <b>Web Developer</b>
                                                     <b>UI/UX Designer</b>
                                                     <b>Ghostwriter</b>
+                                                    <b>Security Analysts</b>
                                                     <b>#NoCode Enthusiast</b>
                                                     <b>Humanitarian</b>
                                                 </span>
@@ -231,9 +233,9 @@
                                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                         <h3>Hassan Mohamed Toziri</h3>
                                         <span class="about-location"><i class="lnr lnr-map-marker"></i> Tanzania, Africa</span>
-                                        <p class="about-content">Hi, I'm a Web Developer, UI/UX Designer, Ghostwriter, Community Project Writer, NoCode Enthusiast and Humanitarian. Freelancer with 6+ years of experience collaborating with cross-functional teams to strive to create the best personalised project, friendly user experience, graphic design, and front-end development with the elemental touch of uniqueness and elegance to make you recognizable.</p>
-                                        <p class="about-content">I am giving you the opportunity to have flexible access to my special expertise in the blink of an eye. Passion is one thing, skill is another, and I have both to turn your project ideas into the latest design trends and intuitive experiences to ensure you are always at the cutting edge of the industry.</p>
-                                        <p class="about-content">I serve ideas and businesses of all sizes, in all niches, and create effective and finest solutions with collaborative relationships built on integrity, trust, and confidentiality. I promise that we will achieve exceptional results while pursuing professional excellence.</p>
+                                        <p class="about-content">I'm a freelancer with over 12+ years of experience collaborating with cross-functional teams to create the best personalized projects, user-friendly experiences, graphic designs, front-end developments, and assessing the security posture of an organization's infrastructure, all with an elemental touch of uniqueness and elegance to make you recognizable and ensure safety.</p>
+                                        <p class="about-content">I'm offering you the opportunity to access my special expertise flexibly and instantly. Passion is one thing, skill is another, and I possess both to transform your project ideas into the latest design trends and intuitive experiences, ensuring you're always at the cutting edge of the industry.</p>
+                                        <p class="about-content">I cater to ideas and businesses of all sizes, across all niches, providing effective and premium solutions with collaborative relationships based on integrity, trust, and confidentiality.</p>
                                     </div>
 
                                     <div class="col-xs-6 col-sm-12 col-md-6 col-lg-6">
@@ -246,7 +248,7 @@
                                                     <i class="lnr lnr-diamond"></i> 
                                                 </div>
                                                 <div class="details-info">
-                                                    <h6>6+ Years Job</h6>
+                                                    <h6>12+ Years Job</h6>
                                                     <p>Experience</p>
                                                 </div>
                                             </li>
@@ -255,7 +257,7 @@
                                                     <i class="lnr lnr-license"></i> 
                                                 </div>
                                                 <div class="details-info">
-                                                    <h6>42+ Projects</h6>
+                                                    <h6>142+ Projects</h6>
                                                     <p>Completed</p>
                                                 </div>
                                             </li>
@@ -333,6 +335,11 @@
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
+                                                        <img src="assets/images/laravel.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
                                                         <img src="assets/images/wordpress.png">
                                                     </div>
                                                 </div>
@@ -343,7 +350,22 @@
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
+                                                        <img src="assets/images/asana.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
                                                         <img src="assets/images/linux.png">
+                                                    </div>
+                                                </div> 
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/Axure-Logo.webp">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/cake.png">
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -355,10 +377,25 @@
                                                     <div class="client-block">
                                                         <img src="assets/images/Visual Code.png">
                                                     </div>
+                                                </div> 
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/jira.png">
+                                                    </div>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
                                                         <img src="assets/images/adobe.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/laragon.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/BrowserStack.png">
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -369,6 +406,11 @@
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
                                                         <img src="assets/images/firebase.png">
+                                                    </div>
+                                                </div> 
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/postman-api.webp">
                                                     </div>
                                                 </div> 
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -395,10 +437,15 @@
                                                     <div class="client-block">
                                                         <img src="assets/images/trado.png">
                                                     </div>
-                                                </div>   
+                                                </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                                                     <div class="client-block">
                                                         <img src="assets/images/proposify.png">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                                                    <div class="client-block">
+                                                        <img src="assets/images/Symfony.png">
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
