--- a/index.html
+++ b/index.html
@@ -658,13 +658,44 @@
 
                                 <div class="portfolio-grid portfolio-trigger" id="portfolio-page">
                                     <div class="row">
+
+
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
+    <div class="portfolio-img">
+        <img src="assets/images/amariannatravel.png" class="img-responsive" alt="Amarianna Travel and Tours.">
+    </div>
+    <div class="portfolio-data">
+        <h4><a href="https://amariannatravelandtours.com/" target="_blank">Amarianna Travel and Tours.</a></h4>
+        <p class="meta"><a href="https://amariannatravelandtours.com/" target="_blank"><i class="lnr lnr-link"></i> https://amariannatravelandtours.com</a></p>
+    </div>
+</div>
+
+
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
+    <div class="portfolio-img">
+        <img src="assets/images/bankingandinsurance.png" class="img-responsive" alt="Africa Banking and Insurance Awards">
+    </div>
+    <div class="portfolio-data">
+        <h4><a href="https://africabankingandinsuranceawards.com/" target="_blank">Africa Banking and Insurance Awards</a></h4>
+        <p class="meta"><a href="https://africabankingandinsuranceawards.com/" target="_blank"><i class="lnr lnr-link"></i> https://africabankingandinsuranceawards.com</a></p>
+    </div>
+</div>
                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
                                             <div class="portfolio-img">
-                                                <img src="assets/images/Tarmal Industries Limited.png" class="img-responsive" alt="Tarmal Industries Limited">
+                                                <img src="assets/images/AfricaSummit.png" class="img-responsive" alt="Africa CEO Summit">
                                             </div>
                                             <div class="portfolio-data">
-                                                <h4><a href="https://soap.co.tz/" target="_blank">Tarmal Industries Limited</a></h4>
-                                                <p class="meta"><a href="https://soap.co.tz/" target="_blank"><i class="lnr lnr-link"></i> https://soap.co.tz</a></p>
+                                                <h4><a href="https://africaceosummit.co/" target="_blank">Africa CEO Summit</a></h4>
+                                                <p class="meta"><a href="https://africaceosummit.co/" target="_blank"><i class="lnr lnr-link"></i> https://africaceosummit.co</a></p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
+                                            <div class="portfolio-img">
+                                                <img src="assets/images/fintechfestival.png" class="img-responsive" alt="Tarmal Industries Limited">
+                                            </div>
+                                            <div class="portfolio-data">
+                                                <h4><a href="https://fintechfestival.africa/" target="_blank">Tarmal Industries Limited</a></h4>
+                                                <p class="meta"><a href="https://fintechfestival.africa/" target="_blank"><i class="lnr lnr-link"></i> https://fintechfestival.africa</a></p>
                                             </div>
                                         </div>
 
@@ -679,6 +710,28 @@
                                                 <img src="assets/images/Good Neighbors.png" class="img-responsive">
                                             </div>
                                         </div>
+
+
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
+    <div class="portfolio-img">
+        <img src="assets/images/tanzaniateceo.png" class="img-responsive" alt="The Tanzanite CEO Roundtable">
+    </div>
+    <div class="portfolio-data">
+        <h4><a href="https://tanzaniteceoroundtable.com/" target="_blank">The Tanzanite CEO Roundtable</a></h4>
+        <p class="meta"><a href="https://tanzaniteceoroundtable.com/" target="_blank"><i class="lnr lnr-link"></i> https://tanzaniteceoroundtable.com</a></p>
+    </div>
+</div>
+
+
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
+    <div class="portfolio-img">
+        <img src="assets/images/fintechandai.png" class="img-responsive" alt="Africa FinTech and AI Awards">
+    </div>
+    <div class="portfolio-data">
+        <h4><a href="https://www.fintechandaiawards.com/" target="_blank">Africa FinTech and AI Awards</a></h4>
+        <p class="meta"><a href="https://www.fintechandaiawards.com/" target="_blank"><i class="lnr lnr-link"></i> https://www.fintechandaiawards.com</a></p>
+    </div>
+</div>
 
 
                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 portfolio-item  web-design all">
